--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "hotelrooms",
   "version": "1.0.0",
-  "description": "Learnable task X\r ---",
+  "description": "Learnable task X",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,7 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.3",
-    "mongoose": "^8.2.2",
-    "yarn": "^1.22.22"
+    "mongoose": "^8.2.2"
   }
 }
