--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hotelrooms",
   "version": "1.0.0",
   "description": "Learnable task X",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
